logs/mobility/build.make.023.log
[  0%] [  0%] Built target roscpp_generate_messages_py
Built target tf2_msgs_generate_messages_cpp
[  0%] [  0%] Built target rosgraph_msgs_generate_messages_py
Built target geometry_msgs_generate_messages_cpp
[  0%] [  0%] Built target sensor_msgs_generate_messages_lisp
Built target roscpp_generate_messages_cpp
[  0%] [  0%] Built target geometry_msgs_generate_messages_lisp
Built target geometry_msgs_generate_messages_py
[  0%] [  0%] Built target rosgraph_msgs_generate_messages_lisp
Built target tf_generate_messages_lisp
[  0%] [  0%] Built target rosgraph_msgs_generate_messages_cpp
Built target roscpp_generate_messages_lisp
[  0%] [  0%] Built target actionlib_generate_messages_lisp
Built target actionlib_generate_messages_py
[  0%] [  0%] Built target actionlib_generate_messages_cpp
Built target actionlib_msgs_generate_messages_cpp
[  0%] Built target tf2_msgs_generate_messages_lisp
[  0%] [  0%] Built target actionlib_msgs_generate_messages_lisp
Built target tf2_msgs_generate_messages_py
[  0%] Built target actionlib_msgs_generate_messages_py
[  0%] [  0%] Built target tf_generate_messages_py
Built target std_msgs_generate_messages_cpp
[  0%] Built target std_msgs_generate_messages_py
[  0%] [  0%] Built target sensor_msgs_generate_messages_py
Built target std_msgs_generate_messages_lisp
[  0%] Built target sensor_msgs_generate_messages_cpp
[  0%] Built target tf_generate_messages_cpp
[35m[1mScanning dependencies of target mobility
[0m[ 25%] [32mBuilding CXX object CMakeFiles/mobility.dir/src/PickUpController.cpp.o
/home/steven/rover_workspace/src/mobility/src/PickUpController.cpp: In member function ‘PickUpResult PickUpController::pickUpSelectedTarget(geometry_msgs::Pose2D)’:
/home/steven/rover_workspace/src/mobility/src/PickUpController.cpp:105:8: error: ‘checkedGood’ was not declared in this scope
    if (checkedGood == true)
        ^
make[2]: *** [CMakeFiles/mobility.dir/src/PickUpController.cpp.o] Error 1
make[1]: *** [CMakeFiles/mobility.dir/all] Error 2
make: *** [all] Error 2
